--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,5 +15,8 @@
       "dom.iterable",
       "scripthost"
     ]
-  }
+  },
+  "vue/multi-word-component-names": ["error", {
+    "ignores": []
+  }]
 }
