--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "server":"json-server --watch src/jobs.json --port 5000"
+    "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "core-js": "^3.8.3",
     "json-server": "1.0.0-beta.1",
     "vue": "^3.2.13",
